--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,5 +15,5 @@ build:
       /kaniko/executor
       --context "${CI_PROJECT_DIR}"
       --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
-      --destination "${CI_PROJECT_DIR}:${CI_COMMIT_TAG}"
-      --destination "${CI_PROJECT_DIR}:latest"
+      --destination "${CI_PROJECT_NAME}:${CI_COMMIT_TAG}"
+      --destination "${CI_PROJECT_NAME}:latest"
