--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,16 +4,14 @@ stages:
 build:
   stage: build
   tags:
-    - generic
+    - privileged
   image:
-    name: gcr.io/kaniko-project/executor:debug
-    entrypoint: [""]
+    name: docker:dind
   script:
-    - mkdir -p /kaniko/.docker
-    - echo "{\"auths\":{\"${DOCKERHUB_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${PERSONAL_DOCKERHUB_USER}" "${PERSONAL_DOCKERHUB_PASSWORD}" | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
-    - >-
-      /kaniko/executor
-      --context "${CI_PROJECT_DIR}"
-      --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
-      --destination "${PERSONAL_DOCKERHUB_USER}/${CI_PROJECT_NAME}:${CI_COMMIT_TAG}"
-      --destination "${PERSONAL_DOCKERHUB_USER}/${CI_PROJECT_NAME}:latest"
+    - mkdir -p ~/.docker
+    - echo "{\"auths\":{\"${DOCKERHUB_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${PERSONAL_DOCKERHUB_USER}" "${PERSONAL_DOCKERHUB_PASSWORD}" | base64 | tr -d '\n')\"}}}" > ~/.docker/config.json
+    - docker build --config ~/.docker/config.json -t ${CI_COMMIT_TAG} --file ${CI_PROJECT_DIR}/Dockerfile ${CI_PROJECT_DIR}
+    - docker tag "${CI_COMMIT_TAG}" "${PERSONAL_DOCKERHUB_USER}/${CI_PROJECT_NAME}:${CI_COMMIT_TAG}"
+    - docker tag "${CI_COMMIT_TAG}" "${PERSONAL_DOCKERHUB_USER}/${CI_PROJECT_NAME}:latest"
+    - docker push "${PERSONAL_DOCKERHUB_USER}/${CI_PROJECT_NAME}:${CI_COMMIT_TAG}"
+    - docker push "${PERSONAL_DOCKERHUB_USER}/${CI_PROJECT_NAME}:latest"
