--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,12 @@
-stages:
-  - build
-
 build:
   stage: build
-  tags:
-    - docker-socket
   image:
-    name: docker:dind
+    name: gcr.io/kaniko-project/executor:v1.14.0-debug
+    entrypoint: [""]
   script:
-    - echo "${PERSONAL_DOCKERHUB_PASSWORD}" | docker login --username "${PERSONAL_DOCKERHUB_USER}" --password-stdin
-    - docker build --tag "${CI_COMMIT_SHORT_SHA}" --file "${CI_PROJECT_DIR}/Dockerfile" "${CI_PROJECT_DIR}"
-    - docker tag "${CI_COMMIT_SHORT_SHA}" "${PERSONAL_DOCKERHUB_USER}"/"${CI_PROJECT_NAME}":latest
-    - docker tag "${CI_COMMIT_SHORT_SHA}" "${PERSONAL_DOCKERHUB_USER}"/"${CI_PROJECT_NAME}":"${CI_COMMIT_SHORT_SHA}"
-    - docker push "${PERSONAL_DOCKERHUB_USER}"/"${CI_PROJECT_NAME}":latest
-    - docker push "${PERSONAL_DOCKERHUB_USER}"/"${CI_PROJECT_NAME}":"${CI_COMMIT_SHORT_SHA}"
+    - /kaniko/executor
+      --context "${CI_PROJECT_DIR}"
+      --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
+      --destination "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG}"
+  rules:
+    - if: $CI_COMMIT_TAG
